--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         <form action="#" method="post">
             <fieldset>
                 <legend>Pilot Credentials</legend>
-                <label for="Pilot_Name">Pilot Name:</label>
-                <input id="Pilot_Name" type="text" name="pilot_name" required placeholder="Enter name">
-                <label for="Access_Code">Access Code:</label>
-                <input id="Access_Code" type="password" required name="access_code" placeholder="password">
-                <label for="Command_Email">Command Email:</label>
-                <input id="Command_Email" type="email" name="email" required placeholder="email">
+                <label for="Pilot-Name">Pilot Name:</label>
+                <input id="Pilot-Name" type="text" name="pilot_name" required placeholder="Enter name">
+                <label for="Access-Code">Access Code:</label>
+                <input id="Access-Code" type="password" required name="access_code" placeholder="password">
+                <label for="Command-Email">Command Email:</label>
+                <input id="Command-Email" type="email" name="email" required placeholder="email">
             </fieldset>
 
 
             <fieldset>
                 <legend>Vessel Diagnostics</legend>
-                <label for="Hull_Damage">Hull Damage (%):</label>
-                <input id="Hull_Damage" type="number" name="hull_damage" required>
-                <label for="Emergency_Level">Emergency Level:</label>
-                <select id="Emergency_Level" name="emergency_level" required> 
+                <label for="Hull-Damage">Hull Damage (%):</label>
+                <input id="Hull-Damage" type="number" name="hull_damage" required>
+                <label for="Emergency-Level">Emergency Level:</label>
+                <select id="Emergency-Level" name="emergency_level" required> 
                     <option value="low">Low</option>
                     <option value="medium">Medium</option>
                     <option value="high">High</option>
@@ -37,8 +37,8 @@
 
             <fieldset>
                 <legend>Mission Log & Evidence</legend>
-                <label for="SOS_Message">SOS Message:</label>
-                <textarea id="SOS_Message" name="SOS Message"  required rows="3"></textarea>
+                <label for="SOS-Message">SOS Message:</label>
+                <textarea id="SOS-Message" name="SOS_Message"  required rows="3"></textarea>
                 <div> 
                     <input id="quarantine" type="checkbox" required name="evidence_confirmed">
                     <label for="quarantine">I agree to quarantine protocols</label>
